--- a/app/KafkaParc/service/consumer/pom.xml
+++ b/app/KafkaParc/service/consumer/pom.xml
@@ -18,6 +18,11 @@
         </dependency>
 
         <dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
         </dependency>
