--- a/app/KafkaParc/service/inserter-mode/pom.xml
+++ b/app/KafkaParc/service/inserter-mode/pom.xml
@@ -12,6 +12,21 @@
 <!--    <packaging>jar</packaging>-->
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jdbc</artifactId>
+        </dependency>
+
+
+        <dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
     </dependencies>
     
 </project>
