--- a/app/KafkaParc/service/producer/pom.xml
+++ b/app/KafkaParc/service/producer/pom.xml
@@ -12,6 +12,10 @@
 <!--    <packaging>jar</packaging>-->
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
     </dependencies>
     
 </project>
