--- a/app/KafkaParc/service/producer/src/main/resources/application.yml
+++ b/app/KafkaParc/service/producer/src/main/resources/application.yml
@@ -1,2 +1,13 @@
 server:
   port: 9000
+
+spring:
+  application:
+    name: KafkaProducer
+
+  kafka:
+    bootstrap-servers: workspace:9092
+    producer:
+      group-id: AutoGeneration
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.apache.kafka.common.serialization.ByteArraySerializer
