--- a/app/KafkaParc/service/transmitter/pom.xml
+++ b/app/KafkaParc/service/transmitter/pom.xml
@@ -12,6 +12,11 @@
 <!--    <packaging>jar</packaging>-->
 
     <dependencies>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
     </dependencies>
     
 </project>
